tests/ui/on_impl.stderr
error: expected `enum`
 --> tests/ui/on_impl.rs:7:1
  |
7 | impl Foo {
  | ^^^^
